# QtShaderCanvas

./: .gitignore  CMakeLists.txt  LICENSE  QtShaderCanvas_Architecture_Updated.md  README.md
.github/workflows/: ci.yml
GLSL-Shaders/: 20221105_inercia.glsl  Clouds.glsl  Disco_Sun_Vortex.glsl  Dubstep.glsl  Extruded_Packed_Circle_Zoom.glsl  Liquid.glsl  Octagrams.glsl  Pirates.glsl  Rainforest.glsl  SunFire.glsl  Tower.glsl  ValentineDay.glsl  cartoon.glsl  cyber.glsl  ghostty-water-blocks.glsl  neptune_racing.glsl  scanline.glsl  synth_ghostty.glsl
GLSL-Shaders/Plasma/: BlackHole.glsl  Dark_Chocolate_Cave_Plasma.glsl  Extended_Space_Jam.glsl  Fl_ow.glsl  Golden_Flow.glsl  Plasma.glsl  Plasmafied.glsl  boomlinde_brain.glsl  screenburnsmooth.glsl
QCodeEngine-C/: CMakeLists.txt  README.md  main.cpp
QCodeEngine-C/QCodeEngine_C/: CMakeLists.txt  test_fold_visibility.cpp  test_folding_diagnostic.cpp
QCodeEngine-C/QCodeEngine_C/include/CodeEditor/: CodeEditor.h  EditorTheme.h  EditorTypes.h  FindReplaceBar.h  FoldQuery.h  GutterWidget.h  LineHighlighter.h  MiniMapWidget.h  PluginAPI.h  diagnosticmanager.cpp  diagnosticmanager.h
QCodeEngine-C/QCodeEngine_C/src/: AutoCompleter.cpp  AutoCompleter.h  CodeEditor.cpp  CodeEditor_p.h  EditorMetrics.h  EditorTheme.cpp  FoldManager.cpp  FoldManager.h  FoldQuery.cpp  GutterWidget.cpp  LineHighlighter.cpp  LiveIndentController.cpp  LiveIndentController.h  MiniMap.cpp  MiniMapWidget.cpp  TreeSitterHighlighter.cpp  TreeSitterHighlighter.h  TreeSitterQuery_C.h  functionlistpopup.h  syntaxerrordetector.cpp  syntaxerrordetector.h  treesitterhelper.cpp  treesitterhelper.h
QCodeEngine-C/QCodeEngine_C/tests/: CMakeLists.txt  test_autocomplete_behavior.cpp  test_autocomplete_symbols.cpp  test_bracket_guides_editing.cpp  test_document_symbols.cpp  test_editor_layout.cpp  test_findreplace_crash.cpp  test_folding.cpp  test_live_indentation.cpp  test_minimap_behavior.cpp  test_theme_json.cpp
QCodeEngine-C/QCodeEngine_C/themes/: vercel_dark.json
examples/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  resources.qrc  shader_checker.cpp
include/: QtShaderCanvas.h
shaders/: default.frag  star_nest.frag
src/: QtShaderCanvas.cpp
